--- a/365_Portal/Life.Master
+++ b/365_Portal/Life.Master
@@ -14,7 +14,8 @@
     <link href="Asset/css/site.css" rel="stylesheet" />
 
     <%-- JS --%>
-    <script src="Asset/js/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <%--<script src="Asset/js/jquery-3.3.1.slim.min.js"></script>--%>
     <script src="Asset/js/popper.min.js"></script>
     <script src="Asset/js/bootstrap.min.js"></script>
     <script src="Asset/js/all.js"></script>
