--- a/365_Portal/Asset/css/site.css
+++ b/365_Portal/Asset/css/site.css
@@ -125,9 +125,43 @@ img.logo {
     font-weight: 500;
 }
 
+    .select2-container .select2-selection--single, .select2-container .select2-selection--single,
+    .select2-container--default .select2-selection--single .select2-selection__arrow {
+        height: calc(1.5em + .75rem + 2px);
+    }
+
+    .select2-container--default .select2-selection--single .select2-selection__rendered {
+        line-height: calc(1.5em + .75rem + 2px);
+    }
+
     .form-control:focus {
         box-shadow: none;
     }
+
+.select2-container.is-valid .select2-selection--single {
+    border-color: #28a745;
+    padding-right: calc(1.5em + .75rem);
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%2328a745' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-position: center right calc(.375em + .1875rem);
+    background-size: calc(.75em + .375rem) calc(.75em + .375rem)
+}
+
+.select2-container.is-invalid .select2-selection--single {
+    border-color: #dc3545;
+    padding-right: calc(1.5em + .75rem);
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23dc3545' viewBox='-2 -2 7 7'%3e%3cpath stroke='%23dc3545' d='M0 0l3 3m0-3L0 3'/%3e%3ccircle r='.5'/%3e%3ccircle cx='3' r='.5'/%3e%3ccircle cy='3' r='.5'/%3e%3ccircle cx='3' cy='3' r='.5'/%3e%3c/svg%3E");
+    background-repeat: no-repeat;
+    background-position: center right calc(.375em + .1875rem);
+    background-size: calc(.75em + .375rem) calc(.75em + .375rem)
+}
+
+.custom-file-label {
+    border: none;
+    border-radius: 0;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.24);
+}
+
 
 .form-group label {
     text-transform: uppercase;
@@ -351,7 +385,7 @@ img.logo {
     overflow: auto;
 }
 
-.user-details .achievements dt, .user-details .gifts dt {
+.user-details .achievements dt, .user-details .gifts dt, .video-rating dt {
     cursor: pointer;
 }
 
@@ -359,6 +393,7 @@ img.logo {
         width: 82px;
         margin-top: 2rem;
     }
+
 
 img.disabled {
     -webkit-filter: grayscale(100%);
@@ -507,7 +542,42 @@ img.disabled {
     border-radius: 0;
 }
 
-
 .overview p {
     font-size: 1.2rem;
+}
+
+.contents-datials embed {
+    width: 100%;
+    height: 35rem;
+}
+
+.contents-datials video {
+    width: 100%;
+}
+
+.video-rating dt span {
+    display: block;
+    font-size: 1.5rem;
+    margin-top: 1.5rem;
+}
+
+.video-rating dt:hover {
+    color: #FEC900;
+}
+
+.video-rating dt .svg-inline--fa {
+    margin-top: 2rem;
+}
+
+.video-rating {
+    background: rgba(0, 0, 0, .50);
+    z-index: 1;
+    width: 96%;
+    left: 1rem;
+    position: absolute;
+    padding: 5.8rem 1rem;
+}
+
+.contents-datials .overview p {
+    font-size: 1.05rem;
 }
