--- a/365_Portal/Asset/css/site.css
+++ b/365_Portal/Asset/css/site.css
@@ -116,7 +116,8 @@ img.logo {
         margin-right: 0.5rem;
     }
 
-.form-control, .select2-container--default .select2-selection--single {
+.form-control, .select2-container--default .select2-selection--single, .select2-container--default .select2-selection--multiple,
+.select2-container--default.select2-container--focus .select2-selection--multiple {
     border: none;
     padding: 0;
     border-bottom: 1px solid rgba(0, 0, 0, 0.24);
@@ -161,6 +162,11 @@ img.logo {
     border-radius: 0;
     border-bottom: 1px solid rgba(0, 0, 0, 0.24);
 }
+
+    .custom-file-label::after {
+        border: none;
+        border-radius: 0;
+    }
 
 
 .form-group label {
@@ -213,7 +219,7 @@ img.logo {
         content: "";
         color: #FEC900;
         border-bottom: 0;
-        border-right: 16rem solid transparent;
+        border-right: 10.5rem solid transparent;
         border-top: 3rem solid;
         border-left: 0;
     }
@@ -548,7 +554,7 @@ img.disabled {
 
 .contents-datials embed {
     width: 100%;
-    height: 35rem;
+    height: 50rem;
 }
 
 .contents-datials video {
@@ -578,6 +584,99 @@ img.disabled {
     padding: 5.8rem 1rem;
 }
 
+.video-control {
+    background: rgba(0, 0, 0, .50);
+    z-index: 1;
+    width: 96%;
+    left: 1rem;
+    position: absolute;
+    padding: 10.6rem 1rem;
+    cursor: pointer;
+}
+
 .contents-datials .overview p {
     font-size: 1.05rem;
 }
+
+/*.question .question-content {
+    position: relative;
+    left: -4rem;
+}*/
+
+.gj-picker-bootstrap .modal-footer {
+    padding: 0;
+}
+
+.gj-datepicker-bootstrap [role=right-icon] button, .gj-datepicker-bootstrap [role=right-icon] button:hover {
+    background-color: #e9ecef;
+    border: 0;
+}
+
+/* rating */
+.rating {
+    position: relative;
+    display: flex;
+    flex-direction: row-reverse;
+    border: 1px solid #000;
+    box-sizing: border-box;
+    background: #FEC900;
+}
+
+    .rating input {
+        display: none;
+    }
+
+    .rating label {
+        display: block;
+        cursor: pointer;
+        width: 100%;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: .5s;
+        background-color: #fff;
+        border-right: 1px solid #000;
+        margin: 0;
+    }
+
+    .rating input[type="radio"]:hover ~ label,
+    .rating input[type="radio"]:checked ~ label {
+        background: transparent
+    }
+
+/* box style - checkbox/radioSSS */
+.box {
+    position: relative;
+    display: flex;
+}
+
+    .box.inline-box {
+        display: inline-block;
+    }
+
+        .box.inline-box label {
+            margin-bottom: .75rem;
+        }
+
+    .box input {
+        display: none;
+    }
+
+    .box label {
+        display: block;
+        cursor: pointer;
+        padding: .25rem 1rem;
+        margin: 0 .75rem;
+        min-width: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #fff;
+        border: 1px solid #000;
+    }
+
+        .box label:hover,
+        .box input[type="radio"]:checked + label, .box input[type="checkbox"]:checked + label {
+            background: #FEC900;
+        }
