--- a/365_Portal/Life.Master
+++ b/365_Portal/Life.Master
@@ -38,7 +38,7 @@
     <form id="form1" runat="server" ng-app="MasterPage">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-0">
             <div class="container">
-                <a class="navbar-brand" href="Topics.aspx">
+                <a class="navbar-brand" href="Default.aspx">
                     <img src="Asset/images/logo.svg" class="logo" />
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
