--- a/365_Portal/Life.Master
+++ b/365_Portal/Life.Master
@@ -36,6 +36,13 @@
 </head>
 <body>
     <form id="form1" runat="server" ng-app="MasterPage">
+       <div class="spinner-center d-none">
+            <div class="spinner">
+                <div class="spinner-border" role="status">
+                    <span class="sr-only">Loading...</span>
+                </div>
+            </div>
+        </div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-0">
             <div class="container">
                 <a class="navbar-brand" href="Default.aspx">
