sidenav on admin master page

--- a/365_Portal/Asset/css/site.css
+++ b/365_Portal/Asset/css/site.css
@@ -12,8 +12,67 @@ a {
         text-decoration: none;
     }
 
+/* side nav*/
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: absolute;
+    z-index: 1;
+    top: 3.8rem;
+    left: 0;
+    background-color: #000000;
+    overflow-x: hidden;
+    transition: 0.5s;
+}
+
+    .sidenav a {
+        padding: .25rem .25rem .25rem 1rem;
+        text-decoration: none;
+        color: #fff;
+        display: block;
+        transition: 0.3s;
+        border-top: 1px solid rgba(255, 255, 255, 0.10);
+        border-bottom: 1px solid rgba(255, 255, 255, 0.10);
+    }
+
+        .sidenav a:hover {
+            color: #FEC900;
+        }
+
+    .sidenav .closebtn {
+        position: absolute;
+        top: 0;
+        right: 25px;
+        font-size: 36px;
+        margin-left: 50px;
+    }
+
+main {
+    transition: margin-left .5s;
+    /*padding: 2.5rem 0;*/
+}
+
+/*@media screen and (max-height: 450px) {
+    .sidenav {
+        padding-top: 15px;
+    }
+
+        .sidenav a {
+            font-size: 18px;
+        }
+}*/
+
+.navbar .navbar-left a.menu {
+    margin-right: 1rem;
+}
+
+
+.navbar .navbar-brand {
+    padding: .4rem 0;
+}
+
 img.logo {
-    width: 48px;
+    height: 48px;
 }
 
 .top-logo {
@@ -29,7 +88,7 @@ img.logo {
     position: fixed;
     width: 100%;
     height: 100vh;
-    background: #fff;
+    background: rgba(255, 255, 255, 0.75);
     z-index: 9999;
 }
 
